5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_1055.log
== SUBMITION (2019-04-11 16:18:16) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:"))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if ((abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- EXECUTION TIME:
0.268107
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:18:18) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:"))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if ((abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- EXECUTION TIME:
0.183233
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:18:23) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:"))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if ((abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:19:05) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:")))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if ((abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- EXECUTION TIME:
0.139241
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 8
    if ((abs(R- d) <= 0.1):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:19:07) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:")))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if ((abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- ERROR:
File "XXXX", line 8
    if ((abs(R- d) <= 0.1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:19:15) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:")))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if (abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:19:17) 
-- CODE:
from math import*
v0 = float(input("velocidade inial:"))
a  = radians(float(input("angulo do vetor:")))
d = float(input("distancia:"))

g = 9.8
R = ((v0**2) *sin(2*a))/g
if (abs(R- d) <= 0.1):
	 print("sim")
else:
	 print("nao")
	
-- EXECUTION TIME:
0.152071
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
